--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -20,8 +20,8 @@ jobs:
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
-          hugo-version: '0.85.0'
-          # extended: true
+          hugo-version: '0.86.0'
+          extended: true
 
       - name: Build
         run: hugo --ignoreCache --enableGitInfo --minify --theme book
