--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@manifoldfinance/hub",
   "version": "1.0.0",
-   "private": true,
+  "private": true,
   "description": "",
   "main": "index.js",
   "scripts": {
-  },
+"deploy": "npx gh-pages -d public/"
+},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/manifoldfinance/hub.git"
@@ -16,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/manifoldfinance/hub/issues"
   },
-  "homepage": "https://github.com/manifoldfinance/hub#readme"
+  "homepage": "https://github.com/manifoldfinance/hub#readme",
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
+  }
 }
